--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body
 {
-  width: 100;
+  width: 100%;
   height: auto;
   overflow-x: hidden;
   color: #40514E;
@@ -10,9 +10,7 @@ h5{
 text-align: center;
 }
 .mar{
-position: absolute;
-right: 430px;
-margin-bottom:10px;
+text-align: left;
 }
 a:hover{
   color: red;
@@ -25,9 +23,9 @@ p{
 h1
 {
   color: #66BFBF;
-
-  position: relative;
-  left: 30%;
+  text-align: center;
+  /*position: relative;
+  left: 30%;*/
   font-size: 5rem;
   font-family: 'Sacramento', cursive;
   margin: 40px auto 0 auto;
@@ -81,14 +79,16 @@ a
   width: 100%;
 }
 .change-width{
-  width: 60%;
+  width: 80%;
+  margin-right: 50%;
 }
 .cloud-top{
   margin-top: 10px;
   width: 10%;
   height: 5%;
-  position: relative;
-  left: 900px;
+  /*position: relative;
+  left: 900px;*/
+  margin-left: 80%;
   margin-bottom: 0;
 }
 .center {
@@ -148,7 +148,7 @@ margin: 0 auto 0 auto;
 }
 .tae{
   float: left;
-  margin-left: 100px;
+  margin-left: 10%;
 }
 .fight-new
 {
